--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Pacifico" rel="stylesheet">
 
   </head>
   <body>
@@ -32,6 +32,6 @@
   </body>
 
   <footer>
-    Made with ❤️ by Alexis
+    Made with 💜 by Alexis
   </footer>
 </html>
